--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,14 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4"
+        "php": "^7.0"
     },
     "autoload": {
         "psr-4": {
             "Lif\\": "app/"
-        }
+        },
+        "files": [
+            "app/core/AUX.php"
+        ]
     }
 }
