- Imporve LDO Read functions, support dynamic where conds with closure - Add some aux functions - Support basic i81n - Support basic plain PHP view template - Imporve container excption control - Fix some bugs

--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,13 @@ var/log/*
 var/db/*
 var/upload/*
 web/*
-web/static/*
 !app/conf/.gitkeep
 !app/conf/conf.sample
 !var/cache/.gitkeep
 !var/log/.gitkeep
 !var/db/.gitkeep
 !var/upload/.gitkeep
-!web/static/.gitkeep
+!web/assets/
 !web/index.php
 
 # Composer
