- Add `email()`, user swiftmailer as default mail sender, add doc - Validators: fix `need` return bugs, and add `array`, `domain`

--- a/app/conf/conf.sample
+++ b/app/conf/conf.sample
@@ -65,16 +65,16 @@ return [
             // -------------------------------------------------
             'mysql_master_rw_0' => [
 
+                // -----------------------------------------
+                //     *`driver` => Database driver type
+                // -----------------------------------------
+                'driver'  => 'mysql',
+
                 // ------------------------------------
                 //     *`host` => Connection's host
                 //     (<IP|Domain:Port]>)
                 // ------------------------------------
                 'host'    => 'db',
-
-                // -----------------------------------------
-                //     *`driver` => Database driver type
-                // -----------------------------------------
-                'driver'  => 'mysql',
 
                 // ----------------------------------------
                 //     *`user` => Connection's username
@@ -120,6 +120,73 @@ return [
             ],
 
             //  ...
+        ],
+    ],
+
+    // ----------------------------------------------
+    //     `email` => Mail related configurations
+    // ----------------------------------------------
+    'mail' => [
+
+        // ------------------------------------------------
+        //     *`default` => Default mail sender to use
+        //     (should in the list of `senders` below)
+        // ------------------------------------------------
+        'default' => 'swiftmailer',
+        
+        // -------------------------------------
+        //     *`senders` => Mail sender list
+        // -------------------------------------
+        'senders' => [
+
+            // ------------------------------------------
+            //     *{swiftmailer} => Mail sender name
+            // ------------------------------------------
+            'swiftmailer' => [
+
+                // --------------------------------------------
+                //     *`driver` => Mail sender driver type
+                // --------------------------------------------
+                'driver' => 'swiftmailer',
+
+                // ------------------------------------------
+                //     *`host` => Mail sender server host
+                // ------------------------------------------
+                'host' => 'smtp.qq.com',
+
+                // ------------------------------------------
+                //     *`port` => Mail sender server port
+                // ------------------------------------------
+                'port' => 465,
+
+                // ----------------------------------------------
+                //     *`account` => Mail sender used account
+                // ----------------------------------------------
+                'account'    => 'admin@example.com',
+
+                // ----------------------------------------------------
+                //     *`credential` => Mail sender used credential
+                // ----------------------------------------------------
+                'credential' => 'access_credential',
+
+                // ----------------------------------------------
+                //     *`sender_name` => Mail sender own name
+                // ----------------------------------------------
+                'sender_name' => 'no-reply',
+
+                // ------------------------------------------------
+                //     *`sender_email` => Mail sender own email
+                // ------------------------------------------------
+                'sender_email' => 'noreply@example.com',
+                
+                // ---------------------------------------------------------
+                //     *`encryption` => Mail sender used encryption type
+                //     - ssl
+                //     - tls
+                //     - null
+                // ---------------------------------------------------------
+                'encryption' => 'ssl',
+            ],
         ],
     ],
 ];
