- Improve model save when params $data and $items selection - Set default config() value - Fix ConcreteColumn sql splice error - Add upload logic in ldtdf

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": "^7.0",
-        "swiftmailer/swiftmailer": "^6.0"
+        "swiftmailer/swiftmailer": "^6.0",
+        "qiniu/php-sdk": "^7.2"
     },
     "autoload": {
         "psr-4": {
