add classmap option in composer.json to avoid case-sensitivity

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "psr-4": {
             "Lif\\": "app/"
         },
+	   "classmap": ["app/"],
         "files": [
             "app/core/aux/base.php"
         ]
